--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,12 @@
         android:theme="@style/Theme.App"
         tools:targetApi="31">
         <activity
+            android:name=".Login"
+            android:exported="false" />
+        <activity
             android:name=".ScreenshotsAdapter"
             android:exported="false"
-            tools:ignore="Instantiatable" >
-
-
-        </activity>
-
+            tools:ignore="Instantiatable"></activity>
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -29,8 +28,5 @@
             </intent-filter>
         </activity>
     </application>
-
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 </manifest>
