--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
+
+
 }
