--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,12 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
+
+
+
+
 }
 
 dependencies {
@@ -39,6 +45,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
