--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,13 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.0-alpha02'
 
 
+    // Import the BoM for the Firebase platform
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
+
+    // Declare the dependencies for the desired Firebase products without specifying versions
+    // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+
+
 }
