--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
     }
 }
 
+
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
@@ -53,6 +54,10 @@ dependencies {
     // For example, declare the dependencies for Firebase Authentication and Cloud Firestore
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+
+
+    //chart dependency
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
 }
