--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,8 @@ dependencies {
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 
+    //material design
+    implementation 'com.google.android.material:material:1.3.0-alpha03'
+
+
 }
