--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,9 @@
             android:exported="false">
 
         </activity>
+        <activity
+            android:name=".Verify_Email"
+            android:exported="false" />
 
         <meta-data
             android:name="preloaded_fonts"
